# Makerates

./: .dockerignore  .env  .gitignore  DATA_FLOW_AND_SCHEMAS.md  DATA_INSPECTION_GUIDE.md  Dockerfile.ingestion  Makefile  OLD_README.md  README.md  SCHEMA_GUIDE.md  currency_pipeline.yml  debug_iceberg_scan.sql  docker-compose.yml  get-api-keys.md  justfile  pyproject.toml  test_local_iceberg.sh
.dlt/: config.toml  secrets.toml
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
docs/: 00-business-requirements.md  01-source-evaluation.md  02-architecture-design.md  03-scd-type2-optimization.md  04-api-layer-decision.md  05-data-warehouse-schema.md  06-star-schema-implementation.md  07-analytics-database-comparison.md  08-sqlalchemy-vs-psycopg2.md  09-production-architecture-security.md  ARCHITECTURE_UPDATES.md  CRITICAL-DECISIONS.md  DBT_DEPLOYMENT_OPTIONS.md  Data Engineer Assignment - Make.com.md  FINAL-LAYER-COMPARISON.md  HISTORICAL_BACKFILL_STRATEGY.md  IMPLEMENTATION-SUMMARY.md  IMPROVEMENTS.md  PIPELINE_COMPLETE.md  PRODUCTION-READINESS-CHECKLIST.md  PSYCOPG2-VS-SQLALCHEMY-EXAMPLES.md  QUESTIONS-ANSWERED.md  QUICKSTART.md  REFACTORING-SUMMARY.md  STAR-SCHEMA-QUICKSTART.md  STAR-SCHEMA-SUMMARY.md  TEST_IMPROVEMENTS.md  VALIDATION_STRATEGY.md
duckdb_ui_service/: Dockerfile.minioduck  entrypoint.sh
schema/: migrate_to_star_schema.sql  star_schema.sql
scripts/: dbt_to_dynamodb.py  init_dynamodb.py  init_observability_table.py  init_quota_tracker.py  record_data_quality.py  sync_to_dynamodb_simple.py
src/: currencylayer_extractor.py  iceberg_loader.py  (+5 more)
(+45 files in other folders)
